# langsmith-mcp-server

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  vercel.json
.github/: dependabot.yml
api/: index.py
examples/: fetch_runs.py  get_thread_history.py  get_usage_trace_counts.py  paginate_runs.py  paginate_runs_lib.py  test_server.py  usage_trace_counts_result.json
langsmith_mcp_server/: server.py
langsmith_mcp_server/common/: formatters.py  helpers.py  pagination.py
langsmith_mcp_server/services/: register_prompts.py  register_resources.py  register_tools.py
langsmith_mcp_server/services/tools/: datasets.py  traces.py  usage.py
tests/: test_context_compat.py
